syntax = "proto3";

option csharp_namespace = "GrpcPaymentService";

package Payment;

// The greeting service definition.
service GrpcPaymentService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc MakePayment(MakePaymentRequest) returns (MakePaymentReply){}
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (stream GetPaymentStatusResponse){}
}

message MakePaymentRequest{
	string productId=1;
	int32 quantity=2;
	string address=3;
}

message MakePaymentReply{
	string orderId = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message GetPaymentStatusRequest{
	string orderId = 1;
}

message GetPaymentStatusResponse{
	string status = 1;
}
// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
